fix(data-table): Update styles to fix alignment of checkbox in data table (#499)
* fix(data-table): Small update to styles to fix alignment of checkbox

--- a/src/components/data-table-v2/_data-table-v2-core.scss
+++ b/src/components/data-table-v2/_data-table-v2-core.scss
@@ -69,8 +69,9 @@
   }
 
   // Overrrides
-  .bx--checkbox-appearance {
-    margin-right: 0;
+  .bx--checkbox-label {
+    margin-top: rem(-8px);
+    padding-left: rem(22px);
   }
 
   .bx--overflow-menu {
